--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,6 @@
 /* header and nav layout */
 header .nav-wrapper {
-  background-color: var(--background-color);
+  background-color: var(--bg-color-white);
   width: 100%;
   z-index: 2;
   position: fixed;
@@ -8,18 +8,35 @@ header .nav-wrapper {
 
 header nav {
   box-sizing: border-box;
-  display: grid;
-  grid-template:
-    'hamburger brand tools' var(--nav-height)
-    'sections sections sections' 1fr / auto 1fr auto;
   align-items: center;
   gap: 0 2em;
   margin: auto;
-  max-width: 1264px;
-  height: var(--nav-height);
-  padding: 0 1rem;
+  width: 100%;
   font-family: var(--body-font-family);
 }
+
+header nav > div {
+  padding: 0 1rem;
+}
+
+header nav .section {
+  width: 100%;
+  box-sizing: border-box;
+}
+
+header .section > div {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+@media (width <= 1440px) {
+  header .section > div {
+    max-width: 1080px;
+    margin: 0 auto;
+  }
+}
+
+/* header nav . */
 
 header nav[aria-expanded="true"] {
   grid-template:
@@ -30,15 +47,10 @@ header nav[aria-expanded="true"] {
   min-height: 100vh;
 }
 
-@media (width >= 600px) {
-  header nav {
-    padding: 0 2rem;
-  }
-}
-
 @media (width >= 900px) {
   header nav {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
   }
 
@@ -71,7 +83,7 @@ header nav .nav-hamburger button {
   border: 0;
   border-radius: 0;
   padding: 0;
-  background-color: var(--background-color);
+  background-color: transparent;
   color: inherit;
   overflow: initial;
   text-overflow: initial;
@@ -141,14 +153,23 @@ header nav[aria-expanded="true"] .nav-hamburger-icon::after {
 /* brand */
 header .nav-brand {
   grid-area: brand;
-  flex-basis: 128px;
+  /* flex-basis: 128px; */
   font-size: var(--heading-font-size-s);
   font-weight: 700;
   line-height: 1;
+  background-color: var(--bg-color-white);
+  margin: 0 auto;
+  padding: 5px 1rem;
+}
+
+header .nav-brand > div {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
 }
 
 header nav .nav-brand img {
-  width: 128px;
+  width: auto;
   height: auto;
 }
 
@@ -158,7 +179,8 @@ header nav .nav-sections {
   flex: 1 1 auto;
   display: none;
   visibility: hidden;
-  background-color: var(--overlay-color);
+  background-color: var(--bg-color-beige);
+  height: 100%;
 }
 
 header nav[aria-expanded="true"] .nav-sections {
@@ -272,4 +294,168 @@ header nav .nav-sections ul > li > ul > li {
 /* tools */
 header nav .nav-tools {
   grid-area: tools;
+  background-color: var(--bg-color-beige);
+}
+
+header nav .nav-tools img {
+  height: 40px;
+  width: auto;
+  object-fit: contain;
+}
+
+header nav .nav-tools > div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 0;
+  gap: 3rem;
+}
+
+header nav .nav-tools ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+}
+
+header nav .nav-tools > div p:nth-of-type(2) {
+  margin-right: auto;
+}
+
+header nav .nav-tools p:nth-of-type(2){
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+header nav .nav-tools p:nth-of-type(2) input[type="text"] {
+  height: auto;
+  width: auto;
+  padding: 1rem 0.75rem;
+  min-width: 20rem;
+  background-color: var(--bg-color-beige); 
+  font-size: 16px;
+  border: 1px solid;
+  border-radius: 2px 0 0 2px;
+}
+
+header nav .nav-tools p:nth-of-type(2) .icon-search {
+  display: block;
+  width: auto;
+  height: auto;
+  padding: 0.9rem;
+  background-color: #484745;
+  border-radius: 0 5px 5px 0;
+}
+
+header nav .nav-tools p:nth-of-type(2) .icon-search:hover {
+  background-color: var(--bg-color-red);
+  cursor: pointer;
+  transition: 0.15s ease-in-out;
+}
+
+header nav .nav-tools p:nth-of-type(2) .icon-search img {
+  width: 20px;
+  height: 20px;
+}
+
+header nav .nav-tools ul li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px;
+}
+
+header nav .nav-tools ul li:hover {
+  color: var(--bg-color-red);
+  cursor: pointer;
+}
+
+header nav .nav-tools ul li:nth-of-type(2),
+header nav .nav-tools ul li:nth-of-type(3) {
+  display: flex;
+  flex-direction: column;
+}
+
+header nav .nav-tools ul li span {
+  height: 28px;
+  width: 28px;
+}
+
+header nav .nav-tools .icon img {
+  height: 100%;
+  width: auto;
+}
+
+header nav .nav-tools .tool-link-register {
+  margin-left: 0.5rem;
+}
+
+header nav .nav-tools .tool-link-register > div:not(.links) span {
+  margin-left: 35px;
+}
+
+header nav .nav-tools .tool-link-register .links span {
+  text-decoration: underline;
+}
+
+header nav .nav-tools .tool-link-register .mobile-label {
+  display: none;
+}
+
+@media (width <= 992px) {
+  header nav .nav-tools .tool-link-register div:not(.mobile-label) {
+    display: none;
+  }
+
+  header nav .nav-tools .tool-link-register .mobile-label {
+    display: block;
+  }
+
+  header nav .nav-tools ul {
+    gap: 1.5rem;
+  }
+
+  header nav .nav-tools ul li {
+    display: flex;
+    flex-direction: column;
+  }
+
+  header nav .nav-tools > div {
+    gap: 1.5rem;
+  }
+
+  header nav .nav-tools p:nth-of-type(2) input[type="text"] {
+    min-width: 15rem;
+    background-color: var(--bg-color-white);
+  }
+
+  header nav .nav-sections ul {
+    margin: 0;
+    padding: 1rem 0;
+  }
+
+  header nav .nav-tools img {
+    height: 30px;
+  }
+}
+
+@media (width <= 768px) {
+  header nav .nav-tools ul li:nth-of-type(1),
+  header nav .nav-tools ul li:nth-of-type(2) {
+    display: none;
+  }
+
+  header nav .nav-tools p:nth-of-type(2){
+    display: none;
+  }
+}
+
+@media (width <= 900px) {
+  header nav .nav-sections {
+    height: 100vh;
+  }
 }
