--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -8,12 +8,47 @@
 }
 
 .cards > ul > li {
-  border: 1px solid var(--dark-color);
-  background-color: var(--bg-color-white)
+  background-color: transparent;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .cards .cards-card-body {
   margin: 16px;
+  flex: 1;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.cards .cards-card-body p:nth-of-type(2) {
+  font-size: 16px;
+  padding: 0 1rem 0.5rem;
+  margin-bottom: auto;
+}
+
+.cards .cards-card-body p,
+.cards .cards-card-body a {
+  margin: 0;
+}
+
+.cards .cards-card-body a {
+  font-size: 16px;
+  font-weight: 400;
+  border: .0625rem solid transparent;
+  background-color: #f0ebe2;
+  color: #484745;
+  border-color: #484745;
+  border-radius: 4px; 
+  min-width: 11.1875rem;
+  padding: 0.5rem 0;
+}
+
+.cards .cards-card-body a:hover {
+  text-decoration: none;
+  background-color: var(--bg-color-red);
+  color: #fff;
 }
 
 .cards .cards-card-image {
@@ -28,4 +63,48 @@
   width: 100%;
   aspect-ratio: 4 / 3;
   object-fit: cover;
+}
+
+/* Grid 3 */
+.cards.grid-3 > ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 24px 30px;
+}
+
+.cards.grid-3 > ul .cards-card-image {
+  line-height: 0;
+  position: relative;
+}
+
+.cards.grid-3 > ul .cards-card-image p {
+  margin: 0;
+}
+
+.cards.grid-3 > ul .cards-card-image p:last-of-type {
+  position: absolute;
+  top: 50%;  
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, .5);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
+
+/* Grid 2 */ 
+.cards.grid-2 > ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 24px 30px;
+}
+
+@media (width <= 768px) {
+  .cards.grid-3 > ul,
+  .cards.grid-2 > ul {
+    grid-template-columns: unset;
+  }
 }
