--- a/styles/styles.css
+++ b/styles/styles.css
@@ -235,3 +235,14 @@ main .section.light,
 main .section.highlight {
   background-color: var(--light-color);
 }
+
+/* Experimentation Widget Styling */
+.hlx-preview-overlay .hlx-badge {
+  padding: 1rem 2rem;
+  font-size: 18px;
+  line-height: normal;
+}
+
+.hlx-preview-overlay .hlx-badge .hlx-popup * {
+  font-size: 14px;
+}
